tests/baselines/reference/symbolProperty30.errors.txt
symbolProperty30.ts(2,5): error TS2411: Property '[Symbol.toStringTag]' of type '() => { x: string; }' is not assignable to 'symbol' index type '() => { x: number; }'.


==== symbolProperty30.ts (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '[Symbol.toStringTag]' of type '() => { x: string; }' is not assignable to 'symbol' index type '() => { x: number; }'.
            return { x: "" };
        }
        [s: symbol]: () => { x: number };
    }